<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstAdditionalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/some_words"
        android:layout_margin="@dimen/margin_standard" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/secondAdditionalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/more_words"
        android:layout_margin="@dimen/margin_standard" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/thirdAdditionalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional_text"
        android:layout_margin="@dimen/margin_standard" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_gravity="center_horizontal"
        android:text="@string/done" />

</LinearLayout>